@@ -10,21 +10,18 @@
  * Change Date: 2029-07-20
  ******************************************************************************/
 
-
 package org.pentaho.platform.plugin.services.pluginmgr;
 
 import org.apache.commons.lang.StringUtils;
 import org.junit.Test;
 import org.pentaho.platform.api.engine.IContentInfo;
 import org.pentaho.platform.api.engine.IPentahoDefinableObjectFactory;
-import org.pentaho.platform.api.engine.IPentahoSession;
 import org.pentaho.platform.api.engine.IPlatformPlugin;
 import org.pentaho.platform.api.engine.IPluginProvider;
 import org.pentaho.platform.api.engine.IPluginResourceLoader;
 import org.pentaho.platform.api.engine.IServiceManager;
 import org.pentaho.platform.api.engine.ISolutionEngine;
 import org.pentaho.platform.api.engine.ISystemConfig;
-import org.pentaho.platform.api.engine.PlatformPluginRegistrationException;
 import org.pentaho.platform.api.engine.PluginBeanException;
 import org.pentaho.platform.api.engine.perspective.pojo.IPluginPerspective;
 import org.pentaho.platform.api.repository2.unified.IUnifiedRepository;
@@ -41,10 +38,12 @@ import org.pentaho.test.platform.utils.TestResourceLocation;
 import org.pentaho.ui.xul.XulOverlay;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 import static org.mockito.Mockito.mock;
 
 /**
@@ -95,7 +94,7 @@ public class PentahoSystemPluginManagerIT extends DefaultPluginManagerIT {
     assertEquals( "5432", setting.toString() );
 
     // Invalid plugin. Return default
-    setting = pluginManager.getPluginSetting( "Non-Existant Plugin", "settings/test-property", "ABCD" );
+    setting = pluginManager.getPluginSetting( "Non-Existent Plugin", "settings/test-property", "ABCD" );
     assertEquals( "ABCD", setting.toString() );
   }
 
@@ -118,25 +117,19 @@ public class PentahoSystemPluginManagerIT extends DefaultPluginManagerIT {
   }
 
   @Test
-  public void testPerspectiveUnRegistration() throws Exception {
+  public void testPerspectiveUnRegistration() {
     PentahoSystem.clearObjectFactory();
-    PentahoSystem.registerObject( new IPluginProvider() {
+    PentahoSystem.registerObject( (IPluginProvider) session -> List.of( new PlatformPlugin() {
       @Override
-      public List<IPlatformPlugin> getPlugins( IPentahoSession session )
-        throws PlatformPluginRegistrationException {
-        return Arrays.asList( (IPlatformPlugin) new PlatformPlugin() {
-          @Override
-          public List<IPluginPerspective> getPluginPerspectives() {
-            return Arrays.asList( mock( IPluginPerspective.class ) );
-          }
-
-          @Override
-          public String getId() {
-            return "foo";
-          }
-        } );
+      public List<IPluginPerspective> getPluginPerspectives() {
+        return List.of( mock( IPluginPerspective.class ) );
       }
-    }, IPluginProvider.class );
+
+      @Override
+      public String getId() {
+        return "foo";
+      }
+    } ), IPluginProvider.class );
     pluginManager = new PentahoSystemPluginManager();
     pluginManager.reload();
     assertEquals( 1, PentahoSystem.getAll( IPluginPerspective.class ).size() );
@@ -166,12 +159,12 @@ public class PentahoSystemPluginManagerIT extends DefaultPluginManagerIT {
     assertEquals( "Wrong number of contentInfos", 1, contentInfos.size() );
     pluginManager.unloadAllPlugins();
     contentInfos = PentahoSystem.getAll( IContentInfo.class );
-    assertEquals( "ContentInfo should have be deregistered.", 0, contentInfos.size() );
+    assertEquals( "ContentInfo should have been deregistered.", 0, contentInfos.size() );
   }
 
-  @Test()
+  @Test
   @Override
-  public void test5c_getBeanBadClassname() throws PluginBeanException, PlatformInitializationException {
+  public void test5c_getBeanBadClassname() throws PlatformInitializationException {
     microPlatform.define( IPluginProvider.class, Tst5DefaultPluginProviderBadClass.class ).start();
 
     // reload should register the beans
